# enteliscript

./: .gitignore  README.md  pyproject.toml
src/enteliscript/: __init__.py  __main__.py  app.py  cli.py  logging.py
src/enteliscript/enteliweb/: __init__.py  api.py  config.py
src/enteliscript/tui/: __init__.py  app.py  style.tcss  types.py  widgets.py
src/enteliscript/tui/cmd/: __init__.py  base.py  commands.py  handler.py
